--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
 	"scripts": {
 		"preinstall": "npx only-allow pnpm",
 		"test": "pnpm lint && pnpm build && pnpm preview",
-		"dev": "vitepress dev",
-		"build": "node --max_old_space_size=4096 ./node_modules/vitepress/bin/vitepress.js build",
-		"preview": "vitepress preview",
+		"dev": "vitepress dev src",
+		"build": "vitepress build src",
+		"preview": "vitepress preview src",
 		"lint": "pnpm lint:es && pnpm lint:mdl && pnpm lint:style",
 		"lint:fix": "pnpm lint:es:fix && pnpm lint:style:fix",
 		"lint:es": "eslint . --ext .vue,.js,.ts,.cjs,.mjs,.jsx,.tsx",
